--- a/package.json
+++ b/package.json
@@ -20,6 +20,24 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
+    "@angular2-material/button": "2.0.0-alpha.8-2",
+    "@angular2-material/button-toggle": "2.0.0-alpha.8-2",
+    "@angular2-material/card": "2.0.0-alpha.8-2",
+    "@angular2-material/checkbox": "2.0.0-alpha.8-2",
+    "@angular2-material/core": "2.0.0-alpha.8-2",
+    "@angular2-material/grid-list": "2.0.0-alpha.8-2",
+    "@angular2-material/icon": "2.0.0-alpha.8-2",
+    "@angular2-material/input": "2.0.0-alpha.8-2",
+    "@angular2-material/list": "2.0.0-alpha.8-2",
+    "@angular2-material/progress-bar": "2.0.0-alpha.8-2",
+    "@angular2-material/progress-circle": "2.0.0-alpha.8-2",
+    "@angular2-material/radio": "2.0.0-alpha.8-2",
+    "@angular2-material/sidenav": "2.0.0-alpha.8-2",
+    "@angular2-material/slide-toggle": "2.0.0-alpha.8-2",
+    "@angular2-material/slider": "2.0.0-alpha.8-2",
+    "@angular2-material/tabs": "2.0.0-alpha.8-2",
+    "@angular2-material/toolbar": "2.0.0-alpha.8-2",
+    "angular-hammer": "^2.2.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
@@ -27,7 +45,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
-    "angular-cli": "1.0.0-beta.14",
+    "angular-cli": "^1.0.0-beta.14",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
